--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,4 @@
-<p>header works!</p>
+<header>
+    <h1>{{title}}</h1>
+    <app-button color="black" textcolor="#2cbc63" text="Add"></app-button>
+</header>
