--- a/src/app/components/quote/quote.component.css
+++ b/src/app/components/quote/quote.component.css
@@ -17,3 +17,14 @@
     margin-top: 0.5rem;
 }
 
+.votes{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.vote-items {
+    display: flex;
+    gap: 1rem;
+}
