--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,5 +2,8 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-width: 30rem;
+    min-width: 37.5rem;
+    background-color: rgba(255,255,255,0.6);
+    padding: 2rem;
+    border-radius: 0.5rem;
 }
