--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,52 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+*, ::before, ::after{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins';
+}
+
+body{
+    background:linear-gradient(180deg,#F15A91, #993A61);
+    display: grid;
+    place-items: center;
+    min-height: 100vh;
+    margin: 2rem auto;
+}
+
+a{
+    text-decoration: none;
+}
+
+.container{
+    display: grid;
+    place-items: center;
+}
+
+.btn{
+    padding: 0.2rem 0.3rem;
+    outline: none;
+    border: none;
+    background-color: rgba(0,0,0,0.7);
+    color: white;
+    font-weight: 600;
+    text-transform: uppercase;
+    border-radius: 0.2rem;
+    font-size: 1rem;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.btn:active {
+    transform: scale(0.88);
+} 
+
+.btn-block {
+    display: block;
+    width: 100%;
+}
+
