--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,6 +4,13 @@ header{
     justify-content: space-between;
     min-width: 37.5rem;
     background-color: rgba(255,255,255,0.6);
-    padding: 2rem;
+    padding: 2rem 1rem;
     border-radius: 0.5rem;
+}
+
+header > h1 {
+    border: 4px solid black;
+    border-radius: 0.5rem;
+    padding: 0 1rem;
+    color: #97164c;
 }
