--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,10 @@
 <header>
     <h1>{{title}}</h1>
-    <app-button color="#97164c" textcolor="white" text="Add" [icontype]="Quote"></app-button>
+    <app-button 
+        color= "{{ showQuote ? 'red' : '#97164c' }}" 
+        textcolor="white" 
+        text="{{ showQuote ? 'Close' : 'Add' }} "
+        (click)="onToggle()" 
+        [icontype]="Quote"
+    ></app-button>
 </header>
