--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -2,8 +2,8 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    min-width: 37.5rem;
-    background-color: rgba(255,255,255,0.6);
+    width: 37.5rem;
+    background-color: rgba(255,255,255,0.7);
     padding: 2rem 1rem;
     border-radius: 0.5rem;
 }
