--- a/src/app/components/quote/quote.component.css
+++ b/src/app/components/quote/quote.component.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     background-color: rgba(255,255,255,0.4);
-    margin: 0.5rem;
+    margin: 0.5rem 0;
     border-radius: 0.5rem;
     padding: 1rem;
     font-weight: 400;
@@ -39,7 +39,6 @@
     border-radius: 0.5rem;
     padding: 0.5rem;
     color: white;
-    /* letter-spacing: 0.04rem; */
 }
 
 .highest{
