--- a/src/styles.css
+++ b/src/styles.css
@@ -21,20 +21,25 @@ a{
 }
 
 .container{
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    width: 100%;
 }
 
 .btn{
     padding: 0.2rem 0.3rem;
     outline: none;
     border: none;
-    background-color: rgba(0,0,0,0.7);
+    background-color: rgba(0,0,0,0.8);
     color: white;
     font-weight: 600;
     text-transform: uppercase;
     border-radius: 0.2rem;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .btn:focus {
@@ -45,8 +50,6 @@ a{
     transform: scale(0.88);
 } 
 
-.btn-block {
-    display: block;
-    width: 100%;
+.danger{
+    color: red;
 }
-
