--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -23,7 +23,6 @@ form{
 .form-control input {
   min-width: 100%;
   border: none;
-  /* outline: 1px solid black; */
   border-radius: 0.2rem;
   background-color: rgba(255, 255,255, 0.6);
   height: 35px;
@@ -32,6 +31,10 @@ form{
 
 .form-control input:focus{
   outline: 2px solid #97164c;
+}
+  
+.form-control input::placeholder{
+  margin-left: 10px;
 }
   
 .form-control-check {
