--- a/src/app/components/quote-detail/quote-detail.component.html
+++ b/src/app/components/quote-detail/quote-detail.component.html
@@ -1,5 +1,8 @@
-<div>
+<div class="item">
     <cite>
         {{quotedescription.author}}
     </cite>
+    <p>
+        Uploaded by: {{quotedescription.user }}
+    </p>
 </div>
