--- a/src/app/components/form/form.component.css
+++ b/src/app/components/form/form.component.css
@@ -10,17 +10,17 @@ form{
   margin: 0.5rem 0;
 }
 
-.form-control {
+.form-group {
   margin: 8px 0;
   width: 100%;
 }
   
-.form-control label{
+.form-group label{
   display: block;
   font-weight: bold;
 }
 
-.form-control input {
+.form-group input {
   min-width: 100%;
   border: none;
   border-radius: 0.2rem;
@@ -29,16 +29,19 @@ form{
   font-size: 17px;
 }
 
-.form-control input:focus{
+.form-group input:focus{
   outline: 2px solid #97164c;
 }
   
-.form-control input::placeholder{
-  margin-left: 10px;
+::placeholder{
+  color: #97164c;
+  text-align: center;
+  margin-left: 5px;
 }
   
 .btn-block {
   display: inline-block;
   margin-top: 0.5rem;
   width: 100%;
+  background-color: rgba(0,0,0,9);
 }
