refresh button removed

--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -32,9 +32,9 @@
         </div>
         <div class="time">
             Created: {{ quote.date |timepipe }}s ago
-            <app-button 
+            <!-- <app-button 
                     [icontype]="downIcon"
-            ></app-button>
+            ></app-button> -->
         </div>
         <p  class="text-votes"> Total Votes: {{ quote.totalVotes }}
             <app-button
