--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,6 +1,7 @@
 <app-form (onAddQuote)="addNewQuote($event)"></app-form>
 
-<div [ngClass]="{ highest: quote.isMostLiked }" appMostUpvotes  class="quote-item" *ngFor="let quote of quotes; let i =index">
+<!-- Most Upvotes -->
+<div class="quote-item" appMostUpvotes [isMost]="{ quote }" [ngClass]="{ highest: quote.isMostLiked }" *ngFor="let quote of quotes; let i =index" >
     “{{quote.message}}”
 
     <div class="quote-detail-wrapper">
@@ -16,6 +17,7 @@
                     [icontype]="upIcon"
                     (click)="upvote(i)"
                     (click)="totalVotes(i)"
+                    (click)="mostVotes()"
                 ></app-button>
                 {{ quote.upvoteNo }}
             </div>
@@ -32,9 +34,6 @@
         </div>
         <div class="time">
             Created: {{ quote.date |timepipe }}s ago
-            <!-- <app-button 
-                    [icontype]="downIcon"
-            ></app-button> -->
         </div>
         <p  class="text-votes"> Total Votes: {{ quote.totalVotes }}
             <app-button
