--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,8 +1,12 @@
 <app-form (onAddQuote)="addNewQuote($event)"></app-form>
 
 <!-- Most Upvotes -->
-<div class="quote-item" appMostUpvotes [isMost]="{ quote }" [ngClass]="{ highest: quote.isMostLiked }" *ngFor="let quote of quotes; let i =index" >
+<div #main class="quote-item" [ngClass]="{ highest: quote.isMostLiked}"  *ngFor="let quote of quotes; let i =index" >
     “{{quote.message}}”
+
+    <!-- appMostUpvotes [isMost]="{ quote: quote.isMostLiked}"  -->
+
+    <!-- [ngClass]="{ highest: quote.isMostLiked}"  -->
 
     <div class="quote-detail-wrapper">
         <app-quote-detail [quotedescription]="quote"></app-quote-detail>
