--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,6 +1,7 @@
 <button href="#" [ngStyle]="{'background-color': color, 
                     'color':textcolor
                 }" 
-        class="btn">{{ text }}
+        class="btn">
+        <span>{{ text }}</span>
         <fa-icon [ngStyle]="{'color': iconcolor }" [icon]="icontype" ></fa-icon>
 </button>
