--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,10 @@
 <header>
     <h1>{{title}}</h1>
     <app-button 
+        class="btn-menu"
         color= "{{ showQuote ? 'red' : '#97164c' }}" 
         textcolor="white" 
-        text="{{ showQuote ? 'Close' : 'Add' }} "
+        text="{{ showQuote ? 'Close' : 'Open' }}"
         (click)="onToggle()" 
         [icontype]="Quote"
     ></app-button>
